--- a/style.css
+++ b/style.css
@@ -233,6 +233,20 @@ a {
   --bs-body-bg-rgb: 17, 17, 41;
 
   color: var(--bs-gray);
+  background-image: url('images/background.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  padding: 0;
+  background-size: 100% auto;
+  background-position: center;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    background-attachment: scroll;
+  }
 }
 
 [data-bs-theme=dark] .dropdown-item {
