--- a/style.css
+++ b/style.css
@@ -233,6 +233,9 @@ a {
   --bs-body-bg-rgb: 17, 17, 41;
 
   color: var(--bs-gray);
+}
+
+body {
   background-image: url('images/background.jpg');
   background-attachment: fixed;
   background-size: cover;
